# libdji

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/dji/: constants.h  crc.h  device.h  device_flow.h  device_manager.h  message.h  subsystem_configurer.h  subsystem_pairer.h  subsystem_streamer.h
scripts/comparewithdjictl/: compare_test.go  go.mod  go.sum
src/: crc.cpp  device.cpp  device_flow.cpp  device_manager.cpp  message.cpp  subsystem_configurer.cpp  subsystem_pairer.cpp  subsystem_streamer.cpp
tests/: CMakeLists.txt  connect_flow_runner.cpp  connect_flow_runner.h  demo_connect_flow.cpp  tst_connect_flow.cpp  tst_connect_flow.h  tst_crc.cpp  tst_crc.h  tst_main.cpp  tst_message.cpp  tst_message.h
